syntax = "proto3";

option csharp_namespace = "gRPCStressTestingService.proto";


service ClientInstances
{ 
	rpc CreateClientInstance(CreateClientInstanceRequest) returns (CreateClientInstanceResponse);
	rpc StreamClientInstances(stream StreamClientInstanceRequest) returns (StreamClientInstanceResponse);
	rpc StreamClientClears(stream ClearClientInstancesRequest) returns (ClearClientInstancesResponse); 
	rpc GetClientInstances(GetClientInstancesFromSessionUniqueRequest) returns (stream GetClientInstancesFromSessionUniqueResponse);
	rpc GetClientInstancesUnary(GetClientInstancesFromSessionUniqueRequest) returns (GetClientInstancesFromSessionUniqueResponse);
}

message CreateClientInstanceRequest
{ 
	string username = 1;
	string SessionUnique = 2;
}

message CreateClientInstanceResponse
{ 
	string SessionUnique = 1; 
	string ClientUnique = 2;
	string TimeOfClientCreation = 3;
}

message StreamClientInstanceRequest
{ 
	string clientUnique = 1;
}

message StreamClientInstanceResponse
{ 
	bool state = 1;
}

message ClearClientInstancesRequest
{ 
	string SessionUnique = 1;
	string ClientUnique = 2;
}

message ClearClientInstancesResponse
{ 
	string SessionUnique = 1; 
	bool ResponseState = 2; 
	int32 InstancesCleared = 3;
}

message GetClientInstancesFromSessionUniqueRequest
{ 
	string SessionUnique = 1;
}

message GetClientInstancesFromSessionUniqueResponse
{ 
	string ClientUnique = 1; 
	string SessionUnique = 2;
}
